<?xml version="1.0"?>
<package format="3">
  <name>ros2_mscl_msgs</name>
  <version>0.0.1</version>
  <description>A package that contains ROS2 message corresponding to microstrain message types.</description>

  <author>Dr. Kristopher Krasnosky</author>
  <author>Parker Hannifin Corp</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sensing_support@lord.com">Parker Hannifin Corp</maintainer>
  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- depend>std_msgs</depend -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
