<?xml version="1.0"?>
<package format="3">
  <name>ros2_mscl</name>
  <version>0.0.1</version>
  <description>The ros2_mscl package provides a driver for the LORD/Microstrain inertial products in ROS2.</description>
  <author>Brian Bingham</author>
  <author>Parker Hannifin Corp</author>
  <maintainer email="sensing_support@lord.com">Parker Hannifin Corp</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/LORD-MicroStrain/ROS2-MSCL</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  
  <depend>diagnostic_updater</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros2_mscl_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  
  <build_depend>rclcpp_lifecycle</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
 
  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
 </export>
</package>
